# ligare

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_zh.md  examples  flake.nix  ligare.cabal  test.lig
app/: Main.hs
app-exe/: Main.hs
app/Ligare/: Error.hs  Pretty.hs
app/Ligare/Back/: Backend.hs
app/Ligare/Checker/: Checker.hs  Context.hs
app/Ligare/Core/: Classify.hs  Debruijn.hs  Desugar.hs  Eval.hs  Syntax.hs
docs/: grammar.ebnf
examples/test/: ligare.toml
libs/std/: lib.lig  ligare.toml
libs/std/src/: lib.lig
src/: compiler.rs  config.rs  diagnostic.rs  lib.rs  main.rs  pretty.rs
src/backend/: c.rs  compile.rs  ir.rs
src/checker/: builtin.rs  checker.rs  context.rs  erase.rs  infer.rs  mod.rs  prove.rs
src/compiler/: mod.rs  modules.rs  monomorph.rs  pipeline.rs  resolve.rs
src/core/: classify.rs  debruijn.rs  desugar.rs  eval.rs  mod.rs  pool.rs  semantics.rs  syntax.rs  whnf.rs
src/front/: lexer.rs  parser.rs
src/package/: manifest.rs  mod.rs  resolver.rs
test/: Test.hs
tests/: checker.rs  classify.rs  desugar.rs  desugar_extra.rs  eval.rs  generics.rs  generics_checker.rs  generics_parser.rs  ir_and_codegen.rs  modules.rs  nested_extreme.rs  package_manager.rs  parser.rs  pretty.rs  refinement.rs  semantics.rs  struct_tests.rs  test_lig_smoke.rs  union_tests.rs  whnf.rs
tests/common/: mod.rs
tests/fixtures/: README.md  color.lig  ffi.lig  generics.lig  nat.lig  nat_peano.lig  struct_basic.lig  struct_nested.lig  struct_point.lig  test.lig  union_basic.lig  union_color.lig  union_option.lig  union_single.lig
(+18 files in other folders)
