cabal-version:      3.0
name:               ligare
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             zzjrabbit
maintainer:         239873059@qq.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Ligare.Core.Syntax
        Ligare.Core.Eval
        Ligare.Checker.Context
        Ligare.Checker.Checker
        Ligare.Front.Parser
        Ligare.Pretty
    build-depends:
        base ^>=4.20.2.0,
        megaparsec >=9.7.0,
        parser-combinators >= 1.3.0
    hs-source-dirs:   app
    default-language: GHC2024

executable ligare
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        ligare,
        haskeline >= 0.8.4.1
    hs-source-dirs:   app-exe
    default-language: GHC2024

test-suite ligare-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:
        base ^>=4.20.2.0,
        ligare,
        tasty >= 1.5,
        tasty-hunit >= 0.10
    hs-source-dirs:   test
    default-language: GHC2024
